replace email with website

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </div>
     </main>
     <footer>
-      <p>
+      <p class="footmark">
         Created by
-        <a href="mailto:hmdshfq@outlook.com">Hammad Shafiq</a>
+        <a href="https://hammadshafiq.com">Hammad Shafiq</a>
       </p>
     </footer>
   </body>
